# musicmanV2

./: README.md
musicman-client/: Cargo.toml
musicman-client/.cargo/: config.toml
musicman-client/src/: cli.rs  helpers.rs  main.rs  player.rs  threads.rs  types.rs
musicman-client/src/handlers/: mod.rs  next_prev.rs  playlist.rs  show.rs
musicman-client/src/helpers/: mod.rs  playlist_response.rs  prompt.rs  search_response.rs
musicman-client/src/modules/: mod.rs  player.rs
musicman-client/src/threads/: mod.rs  player_thread.rs  server_thread.rs  user_thread.rs  watcher_thread.rs
musicman-client/src/types/: highlighter.rs  linereader.rs  mod.rs
musicman-protocol/: Cargo.toml
musicman-protocol/src/: interface.rs  lib.rs  songs.rs
musicman-protocols/: Cargo.toml
musicman-protocols/src/: lib.rs  playlists.rs
musicman-server/: Cargo.toml
musicman-server/src/: handlers.rs  helpers.rs  main.rs  tests.rs  types.rs  utils.rs
