[package]
name = "musicman-client"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
colored = "3.0.0"

# Logging / debugging
tracing = "0.1"
tracing-subscriber = "0.3"

# Audio playback
rodio = "0.17"

# Error handling
anyhow = "1"

# Your shared protocol crate
musicman-protocol = {path = "../musicman-protocol"}
rustyline = "17.0.1"

