[package]
name = "musicman-client"
version = "0.1.0"
edition = "2024"

authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Simple cli client for musicmanV2"
readme = "../README.md"
homepage = "https://github.com/mavenried"
repository = "https://github.com/mavenried/musicmanV2"
keywords = ["cli", "music"]
categories = ["command-line-utilities"]

[dependencies]

serde = { version = "1", features = ["derive"] }
bincode = "1.3.3"
colored = "3.0.0"
rodio = "0.17"
anyhow = "1"
musicman-protocol = {path = "../musicman-protocol"}
uuid = "1.18.1"
tabled = "0.20.0"

