[package]
name = "musicman-protocol"
version = "0.1.2"
edition = "2024"
authors = [
  "mavenried <github.com/mavenried>",
]
license = "MIT OR Apache-2.0"
description = "Protocol for musicmanV2"


[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }



