[package]
name = "musicman-protocols"
version = "0.1.2"
edition = "2024"

authors = ["Joseph Chacko <josephchacko2006@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Protocol for musicmanV2"
readme = "../README.md"
homepage = "https://github.com/mavenried"
repository = "https://github.com/mavenried/musicmanV2"
keywords = ["cli", "music"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }



