
[package]
name = "music-server"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Serialization for protocol messages
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# Audio decoding
symphonia = { version = "0.5.4", features = ["mp3", "flac", "vorbis", "aac", "isomp4"] }

# Error handling
anyhow = "1.0.99"

musicman-protocol = "0.1.0"
dirs = "6.0.0"
serde_json = "1.0.144"
uuid = {version= "1.18.1", features = ["v4", "serde"]}
