
[package]
name = "musicman-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }

serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3.3"

tracing = "0.1.41"
tracing-subscriber = "0.3.20"

symphonia = { version = "0.5.4", features = ["mp3"] }

anyhow = "1.0.99"

musicman-protocol = { path = "../musicman-protocol" }
dirs = "6.0.0"
serde_json = "1.0.144"
uuid = {version= "1.18.1", features = ["v5", "serde"]}
walkdir = "2.5.0"
sha1 = "0.10.6"
